# tetris

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: pylint.yml  python-tests.yml
tests/: test_main.py
